--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     
     <title>PokeApp - Horacio Cazavant</title>
 </head>
-<body class="min-h-100vh min-w-100vw bg-dark">
-    <div class="gx-5 container-fluid d-flex align-items-center justify-content-center bg-dark">
+<body class="min-h-100vh min-w-100vw bg-dark p-2">
+    <div class="container d-flex align-items-center justify-content-center bg-dark">
         <div id="main-container" class="row p-1">
-            <div id="paginator" data-current-offset= "0" data-total-pokemon="" data-max-pages=""class="col-lg-4 column p-2">
+             <div id="paginator" data-current-offset= "0" data-total-pokemon="" data-max-pages=""class="col-lg-4 column p-2">
                 <div class="row mx-2 h-100">
                     <div id="pokemon-list" class="d-flex btn btn-group-vertical">
                     </div>
@@ -34,8 +34,8 @@
                 <div id="pokemon-page"  class="row h-100 w-100">
                     <form action="" id="pokemon-search" class="col-md mx-3 d-flex flex-fill justify-content align-items-center bg-dark rounded text-center">
                         <label for="search-bar-pokemon" class="form-label"></label>
-                        <input id="search-bar-pokemon" type="text" class="m-2 form-control bg-dark text-white" placeholder="Search Pokemon by name or entry number">
-                        <button id="search-pokemon-button" type="submit" class="m-2 btn btn-outline-light">
+                        <input id="search-bar-pokemon" type="text" class="mx-2 form-control bg-dark text-white" placeholder="Search Pokemon by name or entry number">
+                        <button id="search-pokemon-button" type="submit" class="mx-2 btn btn-outline-light">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                                 <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"></path>
                             </svg>
@@ -45,7 +45,7 @@
                         <div class="bg-dark rounded">
                             <div class="d-flex flex-column align-items-center ">
                             <img id="pokemon-sprite" src="" class="img-fluid">
-                            <svg class="d-none p-2 m-2" id="question-mark" xmlns="http://www.w3.org/2000/svg" width="280" height="280" fill="currentColor" class="bi bi-question-circle" viewBox="0 0 16 16">
+                            <svg class="d-none p-2 mx-2" id="question-mark" xmlns="http://www.w3.org/2000/svg" width="280" height="280" fill="currentColor" class="bi bi-question-circle" viewBox="0 0 16 16">
                                 <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
                                 <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"/>
                               </svg> 
@@ -75,9 +75,9 @@
                     </div>
                     
                     <div class="col-md row row-cols-1 mx-2 p-2">
-                        <div class="h4 bg-dark p-2 text-white lead fs-3 fw-bolder text-center rounded">Information</div>
+                        <div class="h5 bg-dark p-2 text-white lead fs-3 fw-bolder text-center rounded">Information</div>
                         <div class="col mb-2 bg-dark text-white rounded">
-                            <div class="col m-1 row row-cols-2 g-2">
+                            <div class="col row row-cols-2">
                                 <div class="col bg-dark">
                                     <p class="h5 text-muted">Name</p>
                                     <p id="pokemon-name" class="lead fw-bolder"></p>
