--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="pokemon.css" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles/pokemon.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
 
     <title>PokeApp - Horacio Cazavant</title>
   </head>
@@ -295,5 +295,5 @@
       </div>
     </div>
   </body>
-  <script src="./src/index.js" type="module"></script>
+  <script src="./index.js" type="module"></script>
 </html>
