--- a/index.html
+++ b/index.html
@@ -296,5 +296,5 @@
       </div>
     </div>
   </body>
-  <script src="index.js" type="module"></script>
+  <script src="src/index.js" type="module"></script>
 </html>
